ci: Run "apt update" before attempting package installations
Signed-off-by: Michael Brown <mbrown@fensystems.co.uk>

--- a/.github/workflows/c.yml
+++ b/.github/workflows/c.yml
@@ -11,6 +11,7 @@ jobs:
         uses: actions/checkout@v1
       - name: Install packages
         run: |
+          sudo apt update
           sudo apt install -y -o Acquire::Retries=50 \
                            autoconf-archive valgrind openssl xxd asn1c
       - name: Autotools
