--- a/.github/workflows/docs.yml
+++ b/.github/workflows/docs.yml
@@ -11,6 +11,7 @@ jobs:
         uses: actions/checkout@v1
       - name: Install packages
         run: |
+          sudo apt update
           sudo apt install -y -o Acquire::Retries=50 \
                            software-properties-common
           sudo add-apt-repository -y ppa:lyx-devel/release
