doc: Fix resolution of generated PNGs
The rsvg-convert -d option specifies only the horizontal DPI,
resulting in images with a slightly strange aspect ratio.  Fix by
specifying both horizontal and vertical DPI.

Signed-off-by: Michael Brown <mbrown@fensystems.co.uk>

--- a/spec/Makefile
+++ b/spec/Makefile
@@ -54,7 +54,7 @@ cx-intro.md : cx.md Makefile
 	tail -n +2 $< | sed -E '/^#.*/q' | head -n -1 > $@
 
 ../%.png : %.svg Makefile
-	rsvg-convert -f png -d 150 -o $@ $<
+	rsvg-convert -f png -d 150 -p 150 -o $@ $<
 
 ../pdf.png : clipart/pdf.svg Makefile
 	rsvg-convert -f png -h 32 -o $@ $<
