kotlin: Build libcx as an Android native library
Build libcx alongside OpenSSL as an Android native library via the
externalNativeBuild mechanism.

Since the C library code is still under active development, we choose
to use the in-tree copy directly.  If the local copy has already been
configured then the initial build will fail with an expected error
suggesting to run "make distclean" in the source directory.  Doing so
will fix the problem.

The CMake script does not automatically run "make distclean" since
this would involve deleting files.

Signed-off-by: Michael Brown <mbrown@fensystems.co.uk>

--- a/kotlin/src/androidMain/cpp/CMakeLists.txt
+++ b/kotlin/src/androidMain/cpp/CMakeLists.txt
@@ -37,6 +37,35 @@ ExternalProject_Add(
     make install_sw DESTDIR=${INSTALL_DIR}
 )
 
+# libcx build
+ExternalProject_Add(
+  libcx-project
+  SOURCE_DIR ${CMAKE_CURRENT_SOURCE_DIR}/libcx
+  BINARY_DIR ${CMAKE_CURRENT_BINARY_DIR}/libcx-build
+  DOWNLOAD_COMMAND
+    test -e ${CMAKE_CURRENT_SOURCE_DIR}/libcx/configure ||
+      ${CMAKE_CURRENT_SOURCE_DIR}/libcx/autogen.sh
+  CONFIGURE_COMMAND
+    PATH=${ANDROID_PATH}
+    ${CMAKE_CURRENT_SOURCE_DIR}/libcx/configure
+      --build=
+      --host=${CMAKE_LIBRARY_ARCHITECTURE}
+      --prefix=${INSTALL_PREFIX}
+      --enable-jni
+      "CC=${CMAKE_C_COMPILER}"
+      "CPPFLAGS=-I${INSTALL_INCLUDEDIR}"
+      "CFLAGS=--target=${CMAKE_C_COMPILER_TARGET}"
+      "LDFLAGS=-XCClinker --target=${CMAKE_C_COMPILER_TARGET} \
+               -L${INSTALL_LIBDIR}"
+  BUILD_COMMAND
+    PATH=${ANDROID_PATH}
+    make -j
+  INSTALL_COMMAND
+    PATH=${ANDROID_PATH}
+    make install DESTDIR=${INSTALL_DIR}
+)
+add_dependencies(libcx-project openssl-project)
+
 # libcrypto.so
 add_library(crypto SHARED IMPORTED)
 add_dependencies(crypto openssl-project)
@@ -51,13 +80,29 @@ set_target_properties(
   ssl PROPERTIES IMPORTED_LOCATION ${INSTALL_LIBDIR}/libssl.so
 )
 
+# libcx.so
+add_library(cx SHARED IMPORTED)
+add_dependencies(cx libcx-project)
+set_target_properties(
+  cx PROPERTIES IMPORTED_LOCATION ${INSTALL_LIBDIR}/libcx.so
+)
+
+# libcxjni.so
+add_library(cxjni SHARED IMPORTED)
+add_dependencies(cxjni libcx-project)
+set_target_properties(
+  cxjni PROPERTIES IMPORTED_LOCATION ${INSTALL_LIBDIR}/libcxjni.so
+)
+
 # Dummy library to trick Gradle into actually building something,
 # since it uses cmake-file-api(7) to identify build targets, and
 # imported libraries do not show up within this list.
 add_library(dummy SHARED dummy.c)
-add_dependencies(dummy crypto ssl)
+add_dependencies(dummy crypto ssl cx cxjni)
 add_custom_command(TARGET dummy POST_BUILD COMMAND cp
   ${INSTALL_LIBDIR}/libcrypto.so
   ${INSTALL_LIBDIR}/libssl.so
+  ${INSTALL_LIBDIR}/libcx.so
+  ${INSTALL_LIBDIR}/libcxjni.so
   ${CMAKE_LIBRARY_OUTPUT_DIRECTORY}/
 )
