c: Include public <cx/jni.h> header file
Include a public header that can be used to verify the existence of
the cxjni library and that defines the only externally visible
symbols.

Signed-off-by: Michael Brown <mbrown@fensystems.co.uk>

--- a/c/include/Makefile.am
+++ b/c/include/Makefile.am
@@ -1,4 +1,11 @@
 libcxdir = $(includedir)
 
-nobase_libcx_HEADERS = cx.h cx/drbg.h cx/generator.h cx/seedcalc.h \
-		       cx/preseed.h cx/asn1.h cx/seedrep.h
+nobase_libcx_HEADERS = \
+	cx.h \
+	cx/asn1.h \
+	cx/drbg.h \
+	cx/generator.h \
+	cx/jni.h \
+	cx/preseed.h \
+	cx/seedcalc.h \
+	cx/seedrep.h
