--- a/.github/workflows/c.yml
+++ b/.github/workflows/c.yml
@@ -14,8 +14,7 @@ jobs:
         run: |
           sudo apt update
           sudo apt install -y -o Acquire::Retries=50 \
-                           autoconf-archive valgrind openssl xxd asn1c \
-                           openjdk-11-jdk
+                           autoconf-archive valgrind openssl xxd asn1c
       - name: Autotools
         working-directory: c
         run: |
@@ -23,7 +22,7 @@ jobs:
       - name: Configure
         working-directory: c
         run: |
-          ./configure --enable-jni
+          ./configure
       - name: Build
         working-directory: c
         run: |
@@ -73,8 +72,7 @@ jobs:
         run: |
           sudo apt update
           sudo apt install -y -o Acquire::Retries=50 \
-                           autoconf-archive valgrind openssl xxd asn1c \
-                           openjdk-11-jdk clang
+                           autoconf-archive valgrind openssl xxd asn1c clang
       - name: Autotools
         working-directory: c
         run: |
@@ -82,7 +80,7 @@ jobs:
       - name: Configure
         working-directory: c
         run: |
-          CC=clang ./configure --enable-jni
+          CC=clang ./configure
       - name: Build
         working-directory: c
         run: |
