kotlin: Switch to SpongyCastle to avoid Android name collisions
Switch from using BouncyCastle to using SpongyCastle, to avoid dumb
Android namespace collisions.  This is apparently still necessary.

This unfortunately breaks the documentation links generated by Dokka.

Signed-off-by: Michael Brown <mbrown@fensystems.co.uk>

--- a/kotlin/gradle.properties
+++ b/kotlin/gradle.properties
@@ -5,7 +5,7 @@ kotlinPlugin: 1.3.72
 ktlintPlugin: 9.2.1
 
 # Dependencies
-bouncyCastleDependency: org.bouncycastle:bcpkix-jdk15on:1.65
+bouncyCastleDependency: com.madgag.spongycastle:core:1.58.0.0
 uuidDependency: com.benasher44:uuid:0.1.0
 
 # Documentation URLs
